css/main.css
@font-face {
    font-family: 'Roboto';
    src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap);
}

:root {  
  --pal-1: #3D5A80;
  --pal-2: #98C1D9;
  --pal-3: #E0FBFC;
  --pal-4: #EE6C4D;
  --pal-5: #293241;

    font-family: 'Roboto', sans-serif;
    color: var(--pal-5);
}

body {
    margin: 60px auto;
    width: 70%;
}
img {
    border-radius: 10px;    
    display: block;
    margin: 0 auto;
    width: 80%;
}

nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}
a {
    text-decoration: none;
    color: #999;
}
a:hover {
    text-decoration: underline;
    color: var(--pal-4);
}
h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    font-size: 1em;
    line-height: 1.4em;
    color: #333;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

ul.projects { 
    margin: 20px auto 40px; 
    font-size: 1.5em;
}

ul.projects li {
    list-style: none;
}

.uline {
    text-decoration: underline;
}

.date {
    /*float: right;*/
    /*flex-wrap:wrap;*/
}

.no-list {
    list-style: none;
}

.timer {
    width: 425px;
    padding-bottom: 1.5rem;
    position: relative;
    margin: 0 auto;
    margin-top: 1rem;
  
    display: flex;
    align-items: center;
  }
  
.digit {
    width: 100px;
    height: 75px;
    margin: 0 0.5rem;
    padding: 0;
    padding-top: 1rem;
    position: relative;

    font-size: 2rem;
    text-align: center;

    color: white;
    background-color: var(--pal-5);
    border-radius: 10px;
}

.tag {
    width: 100%;
    position: absolute;
    bottom: 0.5rem;

    text-align: center;
    font-size: 1rem;

    color: white;
}

.card {
    width: 75%;
    padding: 1.5rem;
    margin: 0 auto;
    border-top: 1px solid #d5d5d5;
}

.flex {
    display: flex;
    flex-wrap: wrap;
}

.proj-link {
    width: 80%;
    margin: 0 auto;
    color: var(--pal-3);
}

.proj-thumb {
    width: 100%;
    object-fit: cover;
    overflow: hidden;
    padding: 5px;
    border: 2px solid transparent;
}

.proj-link:hover > .proj-thumb {
    border: 2px solid #d5d5d5;
}

.proj-header {
    display: inline-block;
    margin-bottom: 0;
    color: var(--blue-500);
}

.proj-out {
    display: block;
    font-size: 0.8rem;
    text-decoration: none;
    color: var(--blue-300);
}

.row {
    display: flex;
    flex-wrap: nowrap;
    flex: 33%;
  }
  
.column {
    flex: 33%;
}

.link-tile {
    background-color: var(--pal-2); 
    border-radius: 0.5em;
    padding: 80px; 
    margin-bottom: 0.25em;
    margin-right: 0.25em;
    border: 1px solid var(--pal-1);
    color: var(--pal-3); 
    text-align: center;
}

